--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.1.3
 django-environ==0.9.0
 gunicorn==20.1.0
 idna==3.4
+psycopg2==2.9.5
 requests==2.28.1
 sqlparse==0.4.3
 urllib3==1.26.13
